updating information on bayesian stats

--- a/notebooks/BayesMLE1.ipynb
+++ b/notebooks/BayesMLE1.ipynb
@@ -11,7 +11,7 @@
     "\n",
     "__[2. Sampling A Distribution Written In Scala Using Py4J](#second-bullet)__\n",
     "\n",
-    "__[3. The Maximum Likelyhood Estimator](#third-bullet)__\n",
+    "__[3. The Maximum Likelihood Estimator](#third-bullet)__\n",
     "\n",
     "__[4. Confidence Intervals From Fisher Information](#fourth-bullet)__\n",
     "\n",
@@ -38,11 +38,11 @@
     "## 2. Sampling A Distribution Written In Scala Using Py4J <a class=\"anchor\" id=\"second-bullet\"></a>\n",
     "---------------\n",
     "\n",
-    "I wrote a [Poisson distribution in Scala](https://github.com/mdh266/PoissonDistributionInScala) so that I could sample data from it to estimate the mean rate $\\lambda$ of that distribution. The Poisson distribution is a probability distribution for a random variable $y \\, \\in \\, \\mathbb{Z}_{+}$ that represents some count phenomena, i.e. a number of non-negative integer occurences in some fixed time frame.  For example the number of trains passing through a station per day or the number of customers that visit a website per hour can be modeled with Poisson distribution. The mathematical form of the distribution is,\n",
+    "I wrote a [Poisson distribution in Scala](https://github.com/mdh266/PoissonDistributionInScala) so that I could sample data from it to estimate the mean rate $\\lambda$ of that distribution. The Poisson distribution is a probability distribution for a random variable $y \\, \\in \\, \\mathbb{Z}^{+}$ that represents some count phenomena, i.e. a number of non-negative integer occurences in some fixed time frame.  For example the number of trains passing through a station per day or the number of customers that visit a website per hour can be modeled with Poisson distribution. The mathematical form of the distribution is,\n",
     "\n",
     "$$ p(y \\, = \\, k)  \\; = \\; \\frac{\\lambda^{k} e^{-\\lambda} }{k!} $$\n",
     "\n",
-    "The parameter $\\lambda \\, \\in \\, \\mathbb{R}_{+}$ is the rate variable, i.e. the true number of customers that visit the website per hour and can be any non-negative real valued number.\n",
+    "The parameter $\\lambda \\, \\in \\, \\mathbb{R}^{+}$ is the rate variable, i.e. the true number of customers that visit the website per hour and can be any non-negative real valued number.\n",
     "\n",
     "\n",
     "The first step in this project was to create the Poisson class. I did this in a previous [project](https://github.com/mdh266/PoissonDistributionInScala), however, one key difference is for Py4J the return value of any public function needs to be Java object. Specifically the [sample](https://github.com/mdh266/BayesBootstrapMLE/blob/main/src/main/scala/Poisson.scala) method needs to return a Java List ([java.util.List[Int]](https://www.javatpoint.com/java-list)) of integers. I originally tried returning a [Scala List](https://www.scala-lang.org/api/current/scala/collection/immutable/List.html) which worked fine in pure Scala, but when returning the list to Python I got a generic \"Java Object\" and realized Py4J was only able to serialize specific datatypes between Python and the JVM.\n",
@@ -570,20 +570,20 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Now let's get into the Maximum Likelyhood Estimator for $\\lambda$ using the distribution `p1`."
+    "Now let's get into the Maximum Likelihood Estimator for $\\lambda$ using the distribution `p1`."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 3. The Maximum Likelyhood Estimator <a class=\"anchor\" id=\"third-bullet\"></a>\n",
+    "## 3. The Maximum Likelihood Estimator <a class=\"anchor\" id=\"third-bullet\"></a>\n",
     "---------- \n",
     "\n",
-    "First what is the difference between a statistic and an estimator?  A **statistic** is any function of a sample.  An **estimator** is any function of a sample that is used to estimate a population parameter.  The **maximum likelyhood estimator** is the value of a population distribution $\\lambda$ that maximizes the probability of observing the sample.  \n",
+    "First what is the difference between a statistic and an estimator?  A **statistic** is any function of a sample.  An **estimator** is any function of a sample that is used to estimate a population parameter.  The **maximum likelihood estimator** is the value of a population distribution $\\lambda$ that maximizes the probability of observing the sample.  \n",
     "\n",
     "\n",
-    "We can find the MLE from a random sample $y_1, y_2, \\, \\ldots \\,, y_{n}$ from $f(y \\, \\vert \\, \\lambda)$ by defining the **likelyhood function**,\n",
+    "We can find the MLE from a independent, identically distributed sample $y_1, y_2, \\, \\ldots \\,, y_{n}$ from $f(y \\, \\vert \\, \\lambda)$ by defining the **likelihood function**,\n",
     "\n",
     "$$ L(\\lambda  \\, \\vert \\, y_1, \\, y_2, \\, \\ldots, \\, y_n)  \\; = \\; \\prod_{i=1}^{n}f(y_{i} \\, \\vert \\, \\lambda) $$\n",
     "\n",
@@ -613,7 +613,7 @@
     "\n",
     "then we say the random variable [converges in probability](https://en.wikipedia.org/wiki/Convergence_of_random_variables). For an estimator this property of convergence is called **consistency**. Consistency is a necessary condition of any estimator in statistics and basically signifies that estimator eventually settles down to constant or some distribution of values. \n",
     "\n",
-    "The second property of the MLE allows us to transform our likelyhood function into one that is often easier to calculate the MLE with, i.e. the log-likelyhood function. That is the MLE, $\\hat{\\lambda}$ will satisfy, \n",
+    "The second property of the MLE allows us to transform our likelihood function into one that is often easier to calculate the MLE with, i.e. the log-likelihood function. That is the MLE, $\\hat{\\lambda}$ will satisfy, \n",
     "\n",
     "$$ \\frac{\\partial \\log(L(\\lambda \\, \\vert y_1, \\, \\ldots, y_n ))}{\\partial \\lambda}  \\; = \\; 0 $$\n",
     "\n",
@@ -621,7 +621,7 @@
     "The third property of the MLE, of asymptotic normality, is helpful in modeling since your standardized residuals are normal. Hence the sum of squares of the residuals are $\\chi^2$ distributed.  This allows us to define confidence intervals around of estimates. The term $\\mathcal{I}$ is the [Fisher Information](https://en.wikipedia.org/wiki/Fisher_information) and will be discussed in the next section.\n",
     "\n",
     "\n",
-    "For the Poisson distribution the likelyhood function is,\n",
+    "For the Poisson distribution the likelihood function is,\n",
     "\n",
     "$$\n",
     "\\begin{align} L(\\lambda  \\, \\vert y_1, \\, y_2, \\, \\ldots, \\, y_n)  \n",
@@ -757,7 +757,7 @@
    "source": [
     "## 4. Confidence Intervals From Fisher Information <a class=\"anchor\" id=\"fourth-bullet\"></a>\n",
     "-------------------\n",
-    "Given a distribution $y_{i} \\, \\sim \\, f(y \\, \\vert \\, \\alpha)$ for $i \\, = \\, 1, \\ldots , n$ and the likelyhood function,\n",
+    "Given a distribution $y_{i} \\, \\sim \\, f(y \\, \\vert \\, \\alpha)$ for $i \\, = \\, 1, \\ldots , n$ and the likelihood function,\n",
     "\n",
     "$$ L(\\alpha \\, \\vert \\, y_1, y_2, \\ldots, y_n) \\; = \\; \\prod_{i=1}^{n} \\,  f(y_i \\, \\vert \\, \\alpha) $$\n",
     "\n",
@@ -793,7 +793,7 @@
     "$$ \\text{S.E.}(\\widehat{\\alpha}) \\; = \\; \\mathcal{I}^{-1/2}$$\n",
     "\n",
     "\n",
-    "The curvature of the log-likelyhood at the MLE dictated by the Fisher information. If $L$ flat then the $\\mathcal{I}$ is small, so the MLE is not stable or well-defined.  Larger Fisher information tells us the MLE is well defined and stable.\n",
+    "The curvature of the log-likelihood at the MLE dictated by the Fisher information. If $L$ flat then the $\\mathcal{I}$ is small, so the MLE is not stable or well-defined.  Larger Fisher information tells us the MLE is well defined and stable.\n",
     "\n",
     "\n",
     "Asymptotic normality for the MLE implies,\n",
@@ -995,9 +995,9 @@
     "## 5. Bayesian Esimatators & Credible Intervals With PyMC3 <a class=\"anchor\" id=\"fifth-bullet\"></a>\n",
     "-----------\n",
     "\n",
-    "In the frequentist approach the parameter we wish to estimation $\\lambda$ is fixed, but unknown.  The observed data $\\left\\{ y_1, y_2, \\ldots, y_n \\right\\}$ is assumed to be from a population $f(y \\, \\vert \\, \\lambda)$ and estimates about the value of the population paremeter $\\lambda$ is obtained by using the maximum likelyhood. As we discussed above, probability statements about the unknown rate constant $\\lambda$ don't make sense as its a fixed value and not random variable.  However, probability statements can be made about a confidence interval for $\\lambda$. In the maximum likelyhood method, asympotic normality allows us to use confidence intervals as a way to quantify the uncertaintity in our estimator which was calculated from the data.\n",
+    "In the frequentist approach the parameter we wish to estimation $\\lambda$ is fixed, but unknown.  The observed data $\\left\\{ y_1, y_2, \\ldots, y_n \\right\\}$ is assumed to be from a population $f(y \\, \\vert \\, \\lambda)$ and estimates about the value of the population paremeter $\\lambda$ is obtained by using the maximum likelihood. As we discussed above, probability statements about the unknown rate constant $\\lambda$ don't make sense as its a fixed value and not random variable.  However, probability statements can be made about a confidence interval for $\\lambda$. In the maximum likelihood method, asympotic normality allows us to use confidence intervals as a way to quantify the uncertaintity in our estimator which was calculated from the data.\n",
     "\n",
-    "In contrast, in Bayesian statistics, $\\lambda$ is not a fixed value, but assumed to have values coming from a probability distribution called the [prior](https://en.wikipedia.org/wiki/Prior_probability) $P(\\lambda)$. This is often subjective and the choice of distribution for the prior often comes from domain knowledge.  The observed data $\\left\\{ y_1, y_2, \\ldots, y_n \\right\\}$ is a sample taken from a population and used to update the prior distribution, now called the [posterior distribution](https://en.wikipedia.org/wiki/Posterior_distribution), $P(\\lambda \\, \\vert \\, y_1, y_2, \\ldots, y_n )$. **Now we can formulate estimators for $\\lambda$ and quanitify the uncertaintity in those esimates by directly using the posterior distribution.**\n",
+    "In contrast, in Bayesian statistics, $\\lambda$ is not a fixed value, but assumed to have values coming from a probability distribution called the [prior](https://en.wikipedia.org/wiki/Prior_probability) $P(\\lambda)$. This is often subjective and the choice of distribution for the prior often comes from domain knowledge.  The observed data $\\left\\{ y_1, y_2, \\ldots, y_n \\right\\}$ is a taken from a population and used to update the prior distribution, now called the [posterior distribution](https://en.wikipedia.org/wiki/Posterior_distribution), $P(\\lambda \\, \\vert \\, y_1, y_2, \\ldots, y_n )$. **Now we can formulate estimators for $\\lambda$ and quanitify the uncertaintity in those esimates by directly using the posterior distribution.**\n",
     "\n",
     "Let $P(y_1, y_2, \\ldots, y_n \\, \\vert \\, \\lambda )$ be the sampling distribution then [Baye's theorem](https://en.wikipedia.org/wiki/Bayes%27_theorem) states,\n",
     "\n",
@@ -1007,12 +1007,12 @@
     "$$\n",
     " \n",
     "\n",
-    "Where $m(y_1, y_2, \\ldots, y_n)$ is called the marginal distribution and used for normalization. Bayes rule can also be rewritten as using the joint distibution $P(\\lambda,\\, y_1, y_2, \\ldots, y_n)$:\n",
+    "Where $m(y_1, y_2, \\ldots, y_n)$ is called the marginal distribution and used for normalization. Another way to rewrite Baye's formula is in terms of the Likelihood functions, $L(\\lambda \\, \\vert \\,  y_1, y_2, \\ldots, y_n)$\n",
     "\n",
     "\n",
     "$$ P(\\lambda \\, \\vert \\, y_1, y_2, \\ldots, y_n)\n",
     " \\; = \\; \n",
-    "\\frac{ P(\\lambda , y_1, y_2, \\ldots, y_n)}{m(y_1, y_2, \\ldots, y_n)}\n",
+    "\\frac{ L(\\lambda \\, \\vert \\,  y_1, y_2, \\ldots, y_n) \\, P(\\lambda)}{m(y_1, y_2, \\ldots, y_n)}\n",
     "$$\n",
     "\n",
     "The [Bayesian estimator](https://en.wikipedia.org/wiki/Bayes_estimator) (often called the posterior mean) is taken the be the expected value over the the random variable $y$:\n",
@@ -1169,7 +1169,14 @@
    "source": [
     "As we saw the Bayesian estimator requires the full posterior distribution. Without a conjugate prior Bayesian methods requires numerical approximation to the posterior which computationally expenisve. Despite the added complexity, Bayesian methods allow us to handle situations where we might not have much data and can often lead us to estimates with smaller variance. \n",
     "\n",
-    "One approach to approximating the posterior distribution is to randomly sample the the prior distribution and then evaluate the joint distribution of the data. Once we have the posterior distribution we can then evaluate the expected value of $\\lambda$.  One common method for random sampling is [Markov Chain Monte Carlo Methods](https://en.wikipedia.org/wiki/Markov_chain_Monte_Carlo) and Bayesian-MCMC methods can be used easily with [PyMC](https://docs.pymc.io/)!  \n",
+    "One approach to approximating the posterior distribution is to randomly sample the the prior distribution and then evaluate the likelihood of that prior value and the data using the formulation of Bayes rule,\n",
+    "\n",
+    "$$ P(\\lambda \\, \\vert \\, y_1, y_2, \\ldots, y_n)\n",
+    " \\; = \\; \n",
+    "\\frac{ L(\\lambda \\, \\vert \\,  y_1, y_2, \\ldots, y_n) \\, P(\\lambda)}{m(y_1, y_2, \\ldots, y_n)}\n",
+    "$$\n",
+    "\n",
+    "Repeated sampling the prior and evaluating the likelihood multiple times gives us a good approximation to the posterior distribution. Once we have the posterior distribution we can then evaluate the expected value of $\\lambda$. A common method for generating the random samples of the prior above is through [Markov Chain Monte Carlo Methods](https://en.wikipedia.org/wiki/Markov_chain_Monte_Carlo). Bayesian methods with MCMC can be used easily with [PyMC](https://docs.pymc.io/)!  \n",
     "\n",
     "We begin by importing the library"
    ]
@@ -1812,16 +1819,7 @@
     "## 6. Connecting The Two Methods <a class=\"anchor\" id=\"sixth-bullet\"></a>\n",
     "------\n",
     "\n",
-    "Another way to rewrite Baye's formula is in terms of the Likelyhood functions, $L(\\lambda \\, \\vert \\,  y_1, y_2, \\ldots, y_n)$\n",
-    "\n",
-    "\n",
-    "$$ P(\\lambda \\, \\vert \\, y_1, y_2, \\ldots, y_n)\n",
-    " \\; = \\; \n",
-    "\\frac{ L(\\lambda \\, \\vert \\,  y_1, y_2, \\ldots, y_n) \\, P(\\lambda)}{m(y_1, y_2, \\ldots, y_n)}\n",
-    "$$\n",
-    "\n",
-    "\n",
-    "Choosing a constant prior $C$ or uniform ($U(\\theta)$ so long $\\theta \\, \\geq \\, \\lambda$) the MAP is the same as the MLE:\n",
+    "One way we can connect the Bayesian methods with the MLE is by choosing a constant prior $C$ or uniform ($U(\\theta)$ so long $\\theta \\, \\geq \\, \\lambda$). Then MAP is the same as the MLE:\n",
     "\n",
     "\n",
     "$$ \\max_{\\lambda} \\, P(\\lambda \\, \\vert \\, y_1, y_2, \\ldots, y_n)\n",
@@ -1900,12 +1898,19 @@
     "This the the same value as the MLE! \n",
     "\n",
     "The [Bernstein-von Miss Theorem](\n",
-    "https://en.wikipedia.org/wiki/Bernstein%E2%80%93von_Mises_theorem) shows that in the limit of large data Bayesian estimators and Maximum Likelyhood estimators converge to the same thing.\n",
+    "https://en.wikipedia.org/wiki/Bernstein%E2%80%93von_Mises_theorem) shows that in the limit of large data Bayesian estimators and Maximum Likelihood estimators converge to the same thing.\n",
     "\n",
-    "In this post I covered maximum likelyhood estimators and Bayesian point estimators on data that was sampled using a Poisson distribution writen in Scala using [Py4J](https://www.py4j.org/).\n",
+    "In this post I covered maximum likelihood estimators and Bayesian point estimators on data that was sampled using a Poisson distribution writen in Scala using [Py4J](https://www.py4j.org/).\n",
     "\n",
     "I hope you enjoyed it!"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -1924,7 +1929,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.7.7"
   }
  },
  "nbformat": 4,
