--- a/notebooks/BayesMLE1.ipynb
+++ b/notebooks/BayesMLE1.ipynb
@@ -19,6 +19,7 @@
     "\n",
     "__[6. Connecting The Two Methods](#sixth-bullet)__\n",
     "\n",
+    "__[7. Conclusions](#seventh-bullet)__\n",
     "\n",
     "## 1. Introduction <a class=\"anchor\" id=\"first-bullet\"></a>\n",
     "-------------\n",
@@ -27,7 +28,7 @@
     "\n",
     "    Estimating a single parameter value from a distribution and then quantifying the uncertantity in the estimate.\n",
     "    \n",
-    "In general I will take two approaches to quantitfying the uncertainity in the estimate, the first of which is [frequentist](https://en.wikipedia.org/wiki/Frequentist_inference) and second that is [Bayesian](https://en.wikipedia.org/wiki/Bayesian_statistics). I was originally inspired by [Jake VanderPlas' post](http://jakevdp.github.io/blog/2014/03/11/frequentism-and-bayesianism-a-practical-intro/) and admit, I am not very seasoned using Bayesian methods. That's why I'll be sticking to a simple example of estimating the mean rate or 𝜆 in a [Poisson distribution](https://en.wikipedia.org/wiki/Poisson_distribution#) from sampled data.  \n",
+    "In general I will take two approaches to quantitfying the uncertainity in the estimate, the first of which is [frequentist](https://en.wikipedia.org/wiki/Frequentist_inference) and second that is [Bayesian](https://en.wikipedia.org/wiki/Bayesian_statistics). I was originally inspired by [Jake VanderPlas' post](http://jakevdp.github.io/blog/2014/03/11/frequentism-and-bayesianism-a-practical-intro/) and admit that I am not very seasoned using Bayesian methods. That's why I'll be sticking to a simple example of estimating the mean rate or 𝜆 in a [Poisson distribution](https://en.wikipedia.org/wiki/Poisson_distribution#) from sampled data.  \n",
     "\n",
     "From the computational perspective, I wanted to do something different and decided to write the probability distribution for generating the data in [Scala](https://www.scala-lang.org/), but then use it with Python. Why did I do this? Well, I like Scala and enjoyed the challenge of writing a Poisson distribution using a functional approach. I also wanted to learn more about how to use [Py4J](https://www.py4j.org/) which can be used to work with functions and objects in the [JVM](https://en.wikipedia.org/wiki/Java_virtual_machine) from Python. [Apache Spark](https://spark.apache.org/) actually uses Py4J in PySpark to write Python wrappers for their Scala API. I've used both PySpark and Spark in Scala extensively in the past and doing this project gave me an opportunity to understand how PySpark works better.\n",
     "\n",
@@ -997,7 +998,7 @@
     "\n",
     "In the frequentist approach the parameter we wish to estimation $\\lambda$ is fixed, but unknown.  The observed data $\\left\\{ y_1, y_2, \\ldots, y_n \\right\\}$ is assumed to be from a population $f(y \\, \\vert \\, \\lambda)$ and estimates about the value of the population paremeter $\\lambda$ is obtained by using the maximum likelihood. As we discussed above, probability statements about the unknown rate constant $\\lambda$ don't make sense as its a fixed value and not random variable.  However, probability statements can be made about a confidence interval for $\\lambda$. In the maximum likelihood method, asympotic normality allows us to use confidence intervals as a way to quantify the uncertaintity in our estimator which was calculated from the data.\n",
     "\n",
-    "In contrast, in Bayesian statistics, $\\lambda$ is not a fixed value, but assumed to have values coming from a probability distribution called the [prior](https://en.wikipedia.org/wiki/Prior_probability) $P(\\lambda)$. This is often subjective and the choice of distribution for the prior often comes from domain knowledge.  The observed data $\\left\\{ y_1, y_2, \\ldots, y_n \\right\\}$ is a taken from a population and used to update the prior distribution, now called the [posterior distribution](https://en.wikipedia.org/wiki/Posterior_distribution), $P(\\lambda \\, \\vert \\, y_1, y_2, \\ldots, y_n )$. **Now we can formulate estimators for $\\lambda$ and quanitify the uncertaintity in those esimates by directly using the posterior distribution.**\n",
+    "In contrast, in Bayesian statistics, $\\lambda$ is not a fixed value, but assumed to have values coming from a probability distribution called the [prior](https://en.wikipedia.org/wiki/Prior_probability) $P(\\lambda)$. This is often subjective and the choice of distribution for the prior often comes from domain knowledge.  The observed data $\\left\\{ y_1, y_2, \\ldots, y_n \\right\\}$ and samples from the prior taken to evaluate the likelihood of the  [posterior distribution](https://en.wikipedia.org/wiki/Posterior_distribution) model, $P(\\lambda \\, \\vert \\, y_1, y_2, \\ldots, y_n )$. **Now we can formulate estimators for $\\lambda$ and quanitify the uncertaintity in those esimates by directly using the posterior distribution.**\n",
     "\n",
     "Let $P(y_1, y_2, \\ldots, y_n \\, \\vert \\, \\lambda )$ be the sampling distribution then [Baye's theorem](https://en.wikipedia.org/wiki/Bayes%27_theorem) states,\n",
     "\n",
@@ -1816,7 +1817,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 6. Connecting The Two Methods <a class=\"anchor\" id=\"sixth-bullet\"></a>\n",
+    "## 6. Connecting The Two Methods  <a class=\"anchor\" id=\"sixth-bullet\"></a>\n",
     "------\n",
     "\n",
     "One way we can connect the Bayesian methods with the MLE is by choosing a constant prior $C$ or uniform ($U(\\theta)$ so long $\\theta \\, \\geq \\, \\lambda$). Then MAP is the same as the MLE:\n",
@@ -1900,17 +1901,13 @@
     "The [Bernstein-von Miss Theorem](\n",
     "https://en.wikipedia.org/wiki/Bernstein%E2%80%93von_Mises_theorem) shows that in the limit of large data Bayesian estimators and Maximum Likelihood estimators converge to the same thing.\n",
     "\n",
-    "In this post I covered maximum likelihood estimators and Bayesian point estimators on data that was sampled using a Poisson distribution writen in Scala using [Py4J](https://www.py4j.org/).\n",
+    "## 7. Conclusions  <a class=\"anchor\" id=\"seventh-bullet\"></a>\n",
     "\n",
-    "I hope you enjoyed it!"
+    "In this post I covered frequentist and Bayesian estimation techniques to data from a [Poisson distribution](https://en.wikipedia.org/wiki/Poisson_distribution) and covered how to quantity the uncertaintity in each. I showed how to sample a probability distribution written in Scala from Python using [Py4J](https://www.py4j.org/). For frequentist methods I covered [maximum likelihood estimation](https://en.wikipedia.org/wiki/Maximum_likelihood_estimation), its convergence and quantifying uncertaintity with confidence intervals using the [Fisher information](https://en.wikipedia.org/wiki/Fisher_information). I also covered using Bayesian estimators using [PyMC3](https://docs.pymc.io/) and quantifying their uncertaintity with [credible intervals](https://en.wikipedia.org/wiki/Credible_interval) using [ArviZ](https://arviz-devs.github.io/arviz/). Finally we showed the connection between the maximum likelihood esimators and Bayesian estimators by choosing a [flat prior](https://stats.stackexchange.com/questions/124753/what-are-examples-of-flat-priors#:~:text=The%20term%20%22flat%22%20in%20reference,c%20over%20the%20real%20line.)\n",
+    "\n",
+    "\n",
+    "I leared a lot in creating this post and hope you enjoyed it!"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
@@ -1929,7 +1926,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.7"
+   "version": "3.7.6"
   }
  },
  "nbformat": 4,
